--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-numpy 
-scipy 
-ultralytics
-streamlit
-ultralytics
-opencv-python
-opencv-python-headless
+opencv-python-headless>=4.5.0
+numpy>=1.21.0
+scipy>=1.7.0
+streamlit>=1.12.0
+ultralytics>=8.0.0
