--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-opencv-python-headless>=4.5.0
-numpy>=1.21.0
-scipy>=1.7.0
-streamlit>=1.12.0
+opencv-python-headless
+numpy
+scipy
+streamlit
 tensorflow
